# programming-language-guide

./: .gitignore
C++/01_HelloWorld/: helloWorld.cpp
C++/03_Operator/: bit_operator.cpp
C++/04_ControlFlow/: if.cpp
C++/04_Exec_Statement/: switch.cpp  while.cpp
C++/06_DataStructure/: array.cpp  char.cpp  map.cpp  string.cpp
C++/07_IO/: cerr.cpp  cin.cpp  clog.cpp  file.cpp
C++/10_Error_Exception/: try_catch.cpp
C++/12_Build/cmake/demo3/: CMakeLists.txt
C++/cJSON/: 01printJson.c  02createJson.c  03createJson.c  04parseJson.c  a.out  create.json
C++/functionPoint/: testFunctionPoint.c
C++/test/: testEnum.c  testStruct.c
C/01_HelloWorld/: helloWorld.c
C/02_DataType/: a.out  const.c  var.c
C/03_Operator/: a.out  bit_operator.c  logic_operator.c
C/04_ControlFlow/: a.out  while.c
C/04_Exec_Statement/: for.c  if.c  loop_infinite.c
C/05_Function/: a.out  function.c
C/06_DataStructure/: a.out  array.c  char.c  enum.c  mem_manager.c  pointer.c  struct.c  union.c
C/07_IO/: a.out  fputs.c  gets_puts.c  printf.c  scanf_printf.c
C/09_Concurrent/: a.out  pthread.c
C/10_Error_Exception/: a.out
Go/01_HelloWorld/: HelloWorld.go
Go/02_DataType/: Const.go  Var.go
Go/03_Operator/: arithmetic_operator.go  assign_operator.go  bit_operator.go  logic_operator.go  other_operator.go  relational_operator.go
Go/04_ControlFlow/: for.go  for_each.go  goto.go
Go/04_Exec_Statement/: loop_infinite.go  select.go
Go/05_Function/: closure.go  function.go
Go/06_DataStructure/: array.go  interface.go  map.go  (+5 more)
HTML/: audio.html
Java/: HelloWorld.java
(+49 files in other folders)
